--- a/Predkosciomierz_rowerowy/MDK-ARM/Predkosciomierz_rowerowy/Predkosciomierz_rowerowy.build_log.htm
+++ b/Predkosciomierz_rowerowy/MDK-ARM/Predkosciomierz_rowerowy/Predkosciomierz_rowerowy.build_log.htm
@@ -21,80 +21,86 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.8.0
 Dialog DLL:      TCM.DLL V1.48.0.0
  
 <h2>Project:</h2>
-D:\Pulpit\Predkosciomierz_rowerowy\MDK-ARM\Predkosciomierz_rowerowy.uvprojx
-Project File Date:  03/24/2021
+D:\STUDIA\Magisterka\1 ROK\SwAW - Git\BikeSpeedo\Predkosciomierz_rowerowy\MDK-ARM\Predkosciomierz_rowerowy.uvprojx
+Project File Date:  05/06/2021
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Rebuild target 'Predkosciomierz_rowerowy'
-assembling startup_stm32f446xx.s...
-compiling font16.c...
 compiling font12.c...
 compiling font8.c...
-compiling font24.c...
+assembling startup_stm32f446xx.s...
 compiling font20.c...
+compiling font16.c...
+compiling font24.c...
+compiling LCD_GUI.c...
+compiling LCD_Touch.c...
+..\Core\Src\LCD_Touch.c(334): warning:  #223-D: function "abs" declared implicitly
+                  Dx = abs((int16_t)(XYpoint_Arr[0][0] -
+..\Core\Src\LCD_Touch.c(340): warning:  #223-D: function "sqrt" declared implicitly
+                  Sqrt1 = sqrt(Dx + Dy);
+..\Core\Src\LCD_Touch.c(351): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+                  if(Dsqrt < 0.95 || Dsqrt > 1.05 || Sqrt1 == 0 || Sqrt2 == 0) {
+..\Core\Src\LCD_Touch.c(351): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+                  if(Dsqrt < 0.95 || Dsqrt > 1.05 || Sqrt1 == 0 || Sqrt2 == 0) {
+..\Core\Src\LCD_Touch.c(384): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+                  if(Dsqrt < 0.95 || Dsqrt > 1.05) {
+..\Core\Src\LCD_Touch.c(384): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+                  if(Dsqrt < 0.95 || Dsqrt > 1.05) {
+..\Core\Src\LCD_Touch.c(417): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+                  if(Dsqrt < 0.95 || Dsqrt > 1.05) {
+..\Core\Src\LCD_Touch.c(417): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+                  if(Dsqrt < 0.95 || Dsqrt > 1.05) {
+..\Core\Src\LCD_Touch.c: 8 warnings, 0 errors
+compiling spi.c...
 compiling DEV_Config.c...
 ..\Core\Src\DEV_Config.c(51): warning:  #940-D: missing return statement at end of non-void function "SPI4W_Write_Byte" 
   }
 ..\Core\Src\DEV_Config.c: 1 warning, 0 errors
 compiling LCD_Driver.c...
 compiling main.c...
-../Core/Inc/LCD_Touch.h(62): warning:  #1295-D: Deprecated declaration TP_Update_Config - give arg types
-  void TP_Update_Config();
+../Core/Inc/BikeSpeedo.h(9): warning:  #1295-D: Deprecated declaration Update_Config - give arg types
+  void Update_Config();
 ../Core/Src/main.c: 1 warning, 0 errors
-compiling LCD_GUI.c...
-compiling spi.c...
 compiling gpio.c...
-compiling LCD_Touch.c...
-../Core/Inc/LCD_Touch.h(62): warning:  #1295-D: Deprecated declaration TP_Update_Config - give arg types
-  void TP_Update_Config();
-..\Core\Src\LCD_Touch.c(363): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-                  if(Dsqrt < 0.95 || Dsqrt > 1.05 || Sqrt1 == 0 || Sqrt2 == 0) {
-..\Core\Src\LCD_Touch.c(363): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-                  if(Dsqrt < 0.95 || Dsqrt > 1.05 || Sqrt1 == 0 || Sqrt2 == 0) {
-..\Core\Src\LCD_Touch.c(396): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-                  if(Dsqrt < 0.95 || Dsqrt > 1.05) {
-..\Core\Src\LCD_Touch.c(396): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-                  if(Dsqrt < 0.95 || Dsqrt > 1.05) {
-..\Core\Src\LCD_Touch.c(429): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-                  if(Dsqrt < 0.95 || Dsqrt > 1.05) {
-..\Core\Src\LCD_Touch.c(429): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-                  if(Dsqrt < 0.95 || Dsqrt > 1.05) {
-..\Core\Src\LCD_Touch.c(948): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  				divider = divider * 10.0;
-..\Core\Src\LCD_Touch.c(976): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  	if(size_circle != 0.0) 
-..\Core\Src\LCD_Touch.c(1015): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  	speed = ((size_circle * 0.0254 * 3.14)/((float)time/1000.0))*3.6;//km/h
-..\Core\Src\LCD_Touch.c(1015): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  	speed = ((size_circle * 0.0254 * 3.14)/((float)time/1000.0))*3.6;//km/h
-..\Core\Src\LCD_Touch.c: 11 warnings, 0 errors
-compiling tim.c...
-compiling stm32f4xx_it.c...
 compiling usart.c...
 compiling stm32f4xx_hal_msp.c...
-compiling stm32f4xx_hal_spi.c...
+compiling stm32f4xx_it.c...
+compiling tim.c...
+compiling BikeSpeedo.c...
+../Core/Inc/BikeSpeedo.h(9): warning:  #1295-D: Deprecated declaration Update_Config - give arg types
+  void Update_Config();
+..\Core\Src\BikeSpeedo.c(241): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  				divider = divider * 10.0;
+..\Core\Src\BikeSpeedo.c(269): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  	if(size_circle != 0.0) 
+..\Core\Src\BikeSpeedo.c(308): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  	speed = ((size_circle * 0.0254 * 3.14)/((float)time/1000.0))*3.6;//km/h
+..\Core\Src\BikeSpeedo.c(308): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  	speed = ((size_circle * 0.0254 * 3.14)/((float)time/1000.0))*3.6;//km/h
+..\Core\Src\BikeSpeedo.c: 5 warnings, 0 errors
 compiling stm32f4xx_hal_rcc.c...
-compiling stm32f4xx_hal_rcc_ex.c...
-compiling stm32f4xx_hal_flash_ex.c...
+compiling stm32f4xx_hal_spi.c...
 compiling stm32f4xx_hal_flash.c...
-compiling stm32f4xx_hal_gpio.c...
-compiling stm32f4xx_hal_flash_ramfunc.c...
+compiling stm32f4xx_hal_flash_ex.c...
+compiling stm32f4xx_hal_rcc_ex.c...
 compiling stm32f4xx_hal_dma.c...
+compiling stm32f4xx_hal_flash_ramfunc.c...
+compiling stm32f4xx_hal_gpio.c...
 compiling stm32f4xx_hal_dma_ex.c...
-compiling stm32f4xx_hal_pwr.c...
-compiling stm32f4xx_hal_pwr_ex.c...
 compiling stm32f4xx_hal_cortex.c...
-compiling stm32f4xx_hal.c...
-compiling stm32f4xx_hal_tim_ex.c...
+compiling stm32f4xx_hal_pwr_ex.c...
+compiling stm32f4xx_hal_pwr.c...
 compiling stm32f4xx_hal_exti.c...
+compiling stm32f4xx_hal_tim_ex.c...
+compiling stm32f4xx_hal.c...
 compiling stm32f4xx_hal_tim.c...
-compiling stm32f4xx_hal_uart.c...
 compiling system_stm32f4xx.c...
+compiling stm32f4xx_hal_uart.c...
 linking...
-Program Size: Code=20234 RO-data=14434 RW-data=96 ZI-data=1920  
+Program Size: Code=19882 RO-data=14402 RW-data=96 ZI-data=1920  
 FromELF: creating hex file...
-"Predkosciomierz_rowerowy\Predkosciomierz_rowerowy.axf" - 0 Error(s), 13 Warning(s).
+"Predkosciomierz_rowerowy\Predkosciomierz_rowerowy.axf" - 0 Error(s), 15 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -118,7 +124,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.4.0
       Include file:  CMSIS\Core\Include\tz_context.h
-Build Time Elapsed:  00:03:06
+Build Time Elapsed:  00:01:05
 </pre>
 </body>
 </html>
