--- a/Predkosciomierz_rowerowy/MDK-ARM/Predkosciomierz_rowerowy/Predkosciomierz_rowerowy.build_log.htm
+++ b/Predkosciomierz_rowerowy/MDK-ARM/Predkosciomierz_rowerowy/Predkosciomierz_rowerowy.build_log.htm
@@ -5,10 +5,10 @@
 <h2>Tool Versions:</h2>
 IDE-Version: µVision V5.33.0.0
 Copyright (C) 2020 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: Norbert Ligas University of Science and Technology in Cracow Flex license: error obtaining information 
+License Information: Krzysztof Pokora AGH Flex license: error obtaining information 
 Tool Versions:
 Toolchain:       MDK-Lite  Version: 5.33.0.0
-Toolchain Path:  C:\Programs\Core\ARM\ARMCC\Bin
+Toolchain Path:  C:\Keil_v5\ARM\ARMCC\Bin
 C Compiler:      Armcc.exe V5.06 update 7 (build 960)
 Assembler:       Armasm.exe V5.06 update 7 (build 960)
 Linker/Locator:  ArmLink.exe V5.06 update 7 (build 960)
@@ -20,17 +20,137 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.8.0
 Dialog DLL:      TCM.DLL V1.48.0.0
  
 <h2>Project:</h2>
-D:\Dokumenty\Pulpit\Studia\II_stopien\8sem\Sensory\BikeSpeedo\Predkosciomierz_rowerowy\MDK-ARM\Predkosciomierz_rowerowy.uvprojx
-Project File Date:  05/11/2021
+D:\STUDIA\Magisterka\1 ROK\SwAW - Git\BikeSpeedo\Predkosciomierz_rowerowy\MDK-ARM\Predkosciomierz_rowerowy.uvprojx
+Project File Date:  06/01/2021
 
 <h2>Output:</h2>
-*** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Programs\Core\ARM\ARMCC\Bin'
-Build target 'Predkosciomierz_rowerowy'
+*** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
+Rebuild target 'Predkosciomierz_rowerowy'
+assembling startup_stm32f446xx.s...
+startup_stm32f446xx.s: Warning: A9564I: Retrying - Tue Jun 01 18:03:24 2021
+startup_stm32f446xx.s: 
+startup_stm32f446xx.s: Cannot connect to license server system.
+startup_stm32f446xx.s:  The license server manager (lmgrd) has not been started yet,
+startup_stm32f446xx.s:  the wrong port@host or license file is being used, or the
+startup_stm32f446xx.s:  port or hostname in the license file has been changed.
+startup_stm32f446xx.s: Feature:       mdk_pro_compiler5
+startup_stm32f446xx.s: Server name:   149.156.121.110
+startup_stm32f446xx.s: License path:  8224@ad.elektro.agh.edu.pl;c:\program files\arm\licenses\license.dat;
+startup_stm32f446xx.s: FlexNet Licensing error:-15,10032
+compiling font8.c...
+Warning: C9564I: Retrying - Tue Jun 01 18:03:24 2021
+Cannot connect to license server system.
+ The license server manager (lmgrd) has not been started yet,
+ the wrong port@host or license file is being used, or the
+ port or hostname in the license file has been changed.
+Feature:       mdk_pro_compiler5
+Server name:   149.156.121.110
+License path:  8224@ad.elektro.agh.edu.pl;c:\program files\arm\licenses\license.dat;
+FlexNet Licensing error:-15,10032
+compiling font12.c...
+Warning: C9564I: Retrying - Tue Jun 01 18:03:24 2021
+Cannot connect to license server system.
+ The license server manager (lmgrd) has not been started yet,
+ the wrong port@host or license file is being used, or the
+ port or hostname in the license file has been changed.
+Feature:       mdk_pro_compiler5
+Server name:   149.156.121.110
+License path:  8224@ad.elektro.agh.edu.pl;c:\program files\arm\licenses\license.dat;
+FlexNet Licensing error:-15,10032
+compiling font24.c...
+Warning: C9564I: Retrying - Tue Jun 01 18:03:24 2021
+Cannot connect to license server system.
+ The license server manager (lmgrd) has not been started yet,
+ the wrong port@host or license file is being used, or the
+ port or hostname in the license file has been changed.
+Feature:       mdk_pro_compiler5
+Server name:   149.156.121.110
+License path:  8224@ad.elektro.agh.edu.pl;c:\program files\arm\licenses\license.dat;
+FlexNet Licensing error:-15,10032
+compiling font20.c...
+Warning: C9564I: Retrying - Tue Jun 01 18:03:24 2021
+Cannot connect to license server system.
+ The license server manager (lmgrd) has not been started yet,
+ the wrong port@host or license file is being used, or the
+ port or hostname in the license file has been changed.
+Feature:       mdk_pro_compiler5
+Server name:   149.156.121.110
+License path:  8224@ad.elektro.agh.edu.pl;c:\program files\arm\licenses\license.dat;
+FlexNet Licensing error:-15,10032
+compiling font16.c...
+Warning: C9564I: Retrying - Tue Jun 01 18:03:24 2021
+Cannot connect to license server system.
+ The license server manager (lmgrd) has not been started yet,
+ the wrong port@host or license file is being used, or the
+ port or hostname in the license file has been changed.
+Feature:       mdk_pro_compiler5
+Server name:   149.156.121.110
+License path:  8224@ad.elektro.agh.edu.pl;c:\program files\arm\licenses\license.dat;
+FlexNet Licensing error:-15,10032
+compiling LCD_Driver.c...
+compiling DEV_Config.c...
+Warning: C9564I: Retrying - Tue Jun 01 18:03:24 2021
+Cannot connect to license server system.
+ The license server manager (lmgrd) has not been started yet,
+ the wrong port@host or license file is being used, or the
+ port or hostname in the license file has been changed.
+Feature:       mdk_pro_compiler5
+Server name:   149.156.121.110
+License path:  8224@ad.elektro.agh.edu.pl;c:\program files\arm\licenses\license.dat;
+FlexNet Licensing error:-15,10032
+..\Core\Src\DEV_Config.c(51): warning:  #940-D: missing return statement at end of non-void function "SPI4W_Write_Byte" 
+  }
+..\Core\Src\DEV_Config.c: 1 warning, 0 errors
+compiling LCD_Touch.c...
+..\Core\Src\LCD_Touch.c(334): warning:  #223-D: function "abs" declared implicitly
+                  Dx = abs((int16_t)(XYpoint_Arr[0][0] -
+..\Core\Src\LCD_Touch.c(340): warning:  #223-D: function "sqrt" declared implicitly
+                  Sqrt1 = sqrt(Dx + Dy);
+..\Core\Src\LCD_Touch.c(351): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+                  if(Dsqrt < 0.95 || Dsqrt > 1.05 || Sqrt1 == 0 || Sqrt2 == 0) {
+..\Core\Src\LCD_Touch.c(351): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+                  if(Dsqrt < 0.95 || Dsqrt > 1.05 || Sqrt1 == 0 || Sqrt2 == 0) {
+..\Core\Src\LCD_Touch.c(384): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+                  if(Dsqrt < 0.95 || Dsqrt > 1.05) {
+..\Core\Src\LCD_Touch.c(384): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+                  if(Dsqrt < 0.95 || Dsqrt > 1.05) {
+..\Core\Src\LCD_Touch.c(417): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+                  if(Dsqrt < 0.95 || Dsqrt > 1.05) {
+..\Core\Src\LCD_Touch.c(417): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+                  if(Dsqrt < 0.95 || Dsqrt > 1.05) {
+..\Core\Src\LCD_Touch.c: 8 warnings, 0 errors
+compiling main.c...
+compiling spi.c...
+compiling gpio.c...
+compiling Utils.c...
+compiling LCD_GUI.c...
+compiling tim.c...
+compiling stm32f4xx_it.c...
+compiling stm32f4xx_hal_msp.c...
 compiling BikeSpeedo.c...
+compiling usart.c...
+compiling stm32f4xx_hal_rcc.c...
+compiling stm32f4xx_hal_spi.c...
+compiling stm32f4xx_hal_rcc_ex.c...
+compiling stm32f4xx_hal_flash_ramfunc.c...
+compiling stm32f4xx_hal_flash.c...
+compiling stm32f4xx_hal_gpio.c...
+compiling stm32f4xx_hal_flash_ex.c...
+compiling stm32f4xx_hal_dma_ex.c...
+compiling stm32f4xx_hal_dma.c...
+compiling stm32f4xx_hal_pwr.c...
+compiling stm32f4xx_hal.c...
+compiling stm32f4xx_hal_exti.c...
+compiling stm32f4xx_hal_tim.c...
+compiling stm32f4xx_hal_pwr_ex.c...
+compiling stm32f4xx_hal_cortex.c...
+compiling stm32f4xx_hal_tim_ex.c...
+compiling stm32f4xx_hal_uart.c...
+compiling system_stm32f4xx.c...
 linking...
 Program Size: Code=18584 RO-data=14256 RW-data=96 ZI-data=1920  
 FromELF: creating hex file...
-"Predkosciomierz_rowerowy\Predkosciomierz_rowerowy.axf" - 0 Error(s), 0 Warning(s).
+"Predkosciomierz_rowerowy\Predkosciomierz_rowerowy.axf" - 0 Error(s), 16 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -47,14 +167,14 @@ Package Vendor: Keil
 
 <h2>Collection of Component include folders:</h2>
   .\RTE\_Predkosciomierz_rowerowy
-  C:\Programs\Packs\ARM\CMSIS\5.7.0\CMSIS\Core\Include
-  C:\Programs\Packs\Keil\STM32F4xx_DFP\2.15.0\Drivers\CMSIS\Device\ST\STM32F4xx\Include
+  C:\Users\krzys\AppData\Local\Arm\Packs\ARM\CMSIS\5.7.0\CMSIS\Core\Include
+  C:\Users\krzys\AppData\Local\Arm\Packs\Keil\STM32F4xx_DFP\2.15.0\Drivers\CMSIS\Device\ST\STM32F4xx\Include
 
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.4.0
       Include file:  CMSIS\Core\Include\tz_context.h
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:02:06
 </pre>
 </body>
 </html>
